--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -1,17 +1,17 @@
 <!doctype html>
 <html>
 <head>
-	<meta charset='utf8'>
-	<meta name='viewport' content='width=device-width'>
+    <meta charset='utf8'>
+    <meta content='width=device-width' name='viewport'>
 
-	<title>Svelte app</title>
+    <title>Svelte app</title>
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/bundle.css'>
+    <link href='/favicon.png' rel='icon' type='image/png'>
+    <link href='/global.css' rel='stylesheet'>
+    <link href='/bundle.css' rel='stylesheet'>
 </head>
 
 <body>
-	<script src='/bundle.js'></script>
+<script src='/bundle.js'></script>
 </body>
 </html>
